--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "description": "Backend of the ICAF project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon index.js"
   },
   "author": "",
@@ -16,6 +16,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.13",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "jest": "^27.0.6"
   }
 }
