--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,10 +12,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@ant-design/icons": "^4.6.2",
-    "parcel": "^2.0.0-nightly.734"
+    "downloadjs": "^1.4.7"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.1.9",
@@ -27,17 +27,11 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.4",
     "react-icons": "^4.2.0",
-    "react-image-gallery": "^1.1.1",
     "react-paypal-express-checkout": "^1.0.5",
-    "react-phone-number-input": "^3.1.23",
-    "react-redux": "^7.2.4",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
-    "redux": "^4.1.0",
-    "redux-form": "^8.3.7",
-    "redux-promise": "^0.6.0",
-    "redux-thunk": "^2.3.0",
     "yup": "^0.32.9"
   },
   "browserslist": {
